# alpha_viewer

./: LICENSE  README.md  __init__.py  alpha_tester.ipynb  alpha_viewer.py  alphafold_visualization.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
alpha_viewer/: __init__.py  alpha_viewer.py
tutorials/: alphafold_visualization.ipynb
