[metadata]
name = alpha_viewer
version = 0.0.1
author = Severin Dicks
author_email = severin.dicks@gmail.com
description = alphafold viewer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Intron7/alpha_viewer
project_urls =
    Bug Tracker = https://github.com/Intron7/alpha_viewer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = alpha_viewer
packages = find:
python_requires = >=3.8

[options.packages.find]
where = alpha_viewer